Fix Java 9 deprecations.